<resources>
    <string name="app_name">App_Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_more_here">Type more here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_url">Add URL</string>
    <string name="eter_url">Eter URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note ?</string>
</resources>