<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDelteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">
    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorwhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"/>
    <TextView
        android:id="@+id/txtDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/colorwhite"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>
    <TextView
        android:id="@+id/txtDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/delete_note"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteNoteMessage"/>
    <TextView
        android:id="@+id/txtCancelNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/cancel"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@id/txtDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/txtDeleteNoteMessage"/>
</androidx.constraintlayout.widget.ConstraintLayout>