<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellanous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="@dimen/_40sdp">

    <TextView
        android:id="@+id/txtMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/_13sdp"/>
    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1"/>
            <ImageView
                android:id="@+id/imageClor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorwhite" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2"/>
            <ImageView
                android:id="@+id/imageClor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorwhite" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3"/>
            <ImageView
                android:id="@+id/imageClor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorwhite" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4"/>
            <ImageView
                android:id="@+id/imageClor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorwhite" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <View
                android:id="@+id/viewColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5"/>
            <ImageView
                android:id="@+id/imageClor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorwhite" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="Pick Color"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/colorwhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="Add Image"
            android:textColor="@color/colorIcon"
            android:textSize="@dimen/_12sdp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutAddUri"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/colorIcon"
            android:textSize="@dimen/_12sdp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutDelteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorDelete"
            android:text="@string/delete_note"/>
    </LinearLayout>
</LinearLayout>